Add constructor and other fucntions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
     <div class="addAnimeBtnDiv">
         <button class="addAnimeBtn">+ Add Anime</button>
+        <div class="displayContainer">hello</div>
         <div id="addAnimeForm">
             <h3>Add Anime</h3>
             <input type="text" class="titleInput" id="title" placeholder="Title">
@@ -26,7 +27,7 @@
                 <h4>Watched?</h4>
                 <input type="checkbox" class="watchedInput" id="hasWatched">
             </div>
-            <button class="submit">Submit</button>
+            <button class="submit" id="submit">Submit</button>
         </div>
     </div>
     <div id="overlay"></div>
